fix miniconda setup step

--- a/.github/actions/nf-test-action/action.yml
+++ b/.github/actions/nf-test-action/action.yml
@@ -49,7 +49,7 @@ runs:
       with:
         miniconda-version: "23.5.1"
         auto-update-conda: true
-        conda-solvers: libmamba
+        conda-solver: libmamba
 
     # Set up secrets
     - name: Set up nextflow secrets
