apply suggestions from code review and improve tests

--- a/subworkflows/nf-core/fastq_align_dedup_bismark/tests/nextflow.config
+++ b/subworkflows/nf-core/fastq_align_dedup_bismark/tests/nextflow.config
@@ -1,3 +1,41 @@
+params {
+    aligner                    = 'bismark'
+    comprehensive              = false
+    known_splices              = null
+    unmapped                   = false
+    // Library presets
+    pbat                       = false
+    rrbs                       = false
+    slamseq                    = false
+    em_seq                     = false
+    single_cell                = false
+    accel                      = false
+    cegx                       = false
+    epignome                   = false
+    zymo                       = false
+    // Bismark options
+    non_directional            = false
+    cytosine_report            = false
+    relax_mismatches           = false
+    num_mismatches             = 0.6
+    // 0.6 will allow a penalty of bp * -0.6
+    // For 100bp reads, this is -60. Mismatches cost -6, gap opening -5 and gap extension -2
+    // So -60 would allow 10 mismatches or ~ 8 x 1-2bp indels
+    // Bismark default is 0.2 (L,0,-0.2), Bowtie2 default is 0.6 (L,0,-0.6)
+    meth_cutoff                = null
+    no_overlap                 = true
+    ignore_r1                  = 0
+    ignore_r2                  = 2
+    ignore_3prime_r1           = 0
+    ignore_3prime_r2           = 2
+    known_splices              = null
+    local_alignment            = false
+    minins                     = null
+    maxins                     = null
+    nomeseq                    = false
+
+}
+
 process {
     withName: 'BISMARK_ALIGN' {
             ext.args = { [
