--- a/.github/actions/nf-test-action/action.yml
+++ b/.github/actions/nf-test-action/action.yml
@@ -21,6 +21,11 @@ runs:
     - name: Setup Nextflow
       uses: nf-core/setup-nextflow@v2
 
+    - name: Set up Python
+      uses: actions/setup-python@0b93645e9fea7318ecaed2b359559ac225c90a2b # v5
+      with:
+        python-version: "3.11"
+
     - name: Install nf-test
       uses: nf-core/setup-nf-test@v1
       with:
