--- a/modules/nf-core/wittyer/Dockerfile
+++ b/modules/nf-core/wittyer/Dockerfile
@@ -1,7 +1,7 @@
 FROM mcr.microsoft.com/dotnet/sdk:9.0@sha256:7d24e90a392e88eb56093e4eb325ff883ad609382a55d42f17fd557b997022ca as builder
 
+ADD https://github.com/Illumina/witty.er.git#v0.5.2 /src
 WORKDIR /src
-COPY . /src
 RUN cd Wittyer \
     && dotnet publish -f net6.0 -r linux-x64 -c Release -o /output \
     && chmod +x /output/Wittyer
