--- a/modules/nf-core/quartonotebook/environment.yml
+++ b/modules/nf-core/quartonotebook/environment.yml
@@ -1,9 +1,12 @@
 channels:
   - conda-forge
   - bioconda
-
 dependencies:
+  # renovate: datasource=conda depName=conda-forge/jupyter
   - conda-forge::jupyter=1.0.0
+  # renovate: datasource=conda depName=conda-forge/matplotlib
   - conda-forge::matplotlib=3.4.3
+  # renovate: datasource=conda depName=conda-forge/papermill
   - conda-forge::papermill=2.4.0
+  # renovate: datasource=conda depName=conda-forge/r-rmarkdown
   - conda-forge::r-rmarkdown=2.25
