build: Add quarto to environment.yml

--- a/modules/nf-core/quartonotebook/environment.yml
+++ b/modules/nf-core/quartonotebook/environment.yml
@@ -2,6 +2,8 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
+  # renovate: datasource=conda depName=conda-forge/papermill
+  - conda-forge::quarto=1.3.433
   # renovate: datasource=conda depName=conda-forge/jupyter
   - conda-forge::jupyter=1.0.0
   # renovate: datasource=conda depName=conda-forge/matplotlib
