--- a/.github/workflows/wave.yml
+++ b/.github/workflows/wave.yml
@@ -57,6 +57,7 @@ jobs:
       matrix:
         files: "${{ fromJson(needs.generate-matrix.outputs.conda-matrix) }}"
         profile: [docker, singularity]
+        platform: ["linux/amd64", "linux/arm64"]
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
 
@@ -76,6 +77,7 @@ jobs:
               $PROFILE \
               --freeze \
               --await \
+              --platform ${{ matrix.platform }} \
               --tower-token ${{ secrets.TOWER_ACCESS_TOKEN }} \
               --tower-workspace-id ${{ secrets.TOWER_WORKSPACE_ID }}
 
