--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -675,6 +675,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
+      - uses: actions/setup-python@0b93645e9fea7318ecaed2b359559ac225c90a2b # v5
       - name: Run nf-test Action
         uses: ./.github/actions/nf-test-action
         with:
@@ -701,6 +702,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
+      - uses: actions/setup-python@0b93645e9fea7318ecaed2b359559ac225c90a2b # v5
       - name: Run nf-test Action
         uses: ./.github/actions/nf-test-action
         env:
