--- a/subworkflows/nf-core/fastq_align_dedup_bwameth/tests/nextflow.config
+++ b/subworkflows/nf-core/fastq_align_dedup_bwameth/tests/nextflow.config
@@ -3,7 +3,7 @@ process {
         ext.prefix = { "${meta.id}.sorted" }
     }
 
-    withName: PICARD_MARKDUPLICATES {
+    withName: 'PICARD_MARKDUPLICATES' {
         ext.args = "--ASSUME_SORTED true --REMOVE_DUPLICATES false --VALIDATION_STRINGENCY LENIENT --PROGRAM_RECORD_ID 'null' --TMP_DIR tmp"
         ext.prefix = { "${meta.id}.markdup.sorted" }
     }
