build: Remove quarto

--- a/modules/nf-core/quartonotebook/environment.yml
+++ b/modules/nf-core/quartonotebook/environment.yml
@@ -2,8 +2,9 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
-  # renovate: datasource=conda depName=conda-forge/papermill
-  - conda-forge::quarto=1.5.57
+  # renovate: datasource=conda depName=conda-forge/quarto
+  # FIXME https://github.com/nf-core/modules/issues/7006
+  # - conda-forge::quarto=1.5.57
   # renovate: datasource=conda depName=conda-forge/jupyter
   - conda-forge::jupyter=1.0.0
   # renovate: datasource=conda depName=conda-forge/matplotlib
