build: Switch to Seqera containers

--- a/modules/nf-core/quartonotebook/environment.yml
+++ b/modules/nf-core/quartonotebook/environment.yml
@@ -4,7 +4,7 @@ channels:
 dependencies:
   # renovate: datasource=conda depName=conda-forge/quarto
   # FIXME https://github.com/nf-core/modules/issues/7006
-  # - conda-forge::quarto=1.5.57
+  - conda-forge::quarto=1.5.57
   # renovate: datasource=conda depName=conda-forge/jupyter
   - conda-forge::jupyter=1.0.0
   # renovate: datasource=conda depName=conda-forge/matplotlib
