--- a/subworkflows/nf-core/fastq_align_dedup_bismark/meta.yml
+++ b/subworkflows/nf-core/fastq_align_dedup_bismark/meta.yml
@@ -32,7 +32,7 @@ input:
       description: |
         Structure: [ val(meta), path(fasta) ]
       pattern: "*.{fa,fa.gz}"
-  - ch_index:
+  - ch_bismark_index:
       description: |
         Bismark genome index files
         Structure: [ val(meta), path(index) ]
