--- a/subworkflows/nf-core/fastq_align_dedup_bwameth/tests/nextflow.config
+++ b/subworkflows/nf-core/fastq_align_dedup_bwameth/tests/nextflow.config
@@ -1,4 +1,8 @@
 process {
+    withName: 'PARABRICKS_FQ2BAMMETH' {
+        ext.args = '--low-memory'
+    }
+    
     withName: 'SAMTOOLS_SORT' {
         ext.prefix = { "${meta.id}.sorted" }
     }
