--- a/modules/nf-core/mgikit/demultipex/meta.yml
+++ b/modules/nf-core/mgikit/demultipex/meta.yml
@@ -9,7 +9,6 @@ tools:
       description: "Demultiplex MGI fastq files"
       homepage: "https://sagc-bioinformatics.github.io/mgikit/"
       documentation: "https://sagc-bioinformatics.github.io/mgikit/"
-      licence: "https://github.com/sagc-bioinformatics/mgikit/blob/main/LICENSE"
 input:
   - - meta:
         type: map
@@ -117,8 +116,9 @@ output:
           description: Demultiplexing Quality Reports
           pattern: "mgikit.{info,general,ambiguous_barcode,undetermined_barcode}"
   - versions:
-    type: file
-    description: File containing software versions
-    pattern: "versions.yml"
+      - versions.yml:
+          type: file
+          description: File containing software versions
+          pattern: "versions.yml"
 authors:
   - "@ziadbkh"
