add tests + snap

--- a/subworkflows/nf-core/fasta_create_index_bismark_bwameth/meta.yml
+++ b/subworkflows/nf-core/fasta_create_index_bismark_bwameth/meta.yml
@@ -53,11 +53,13 @@ output:
       description: |
         Bismark genome index files
         Structure: [ val(meta), path(bismark_index) ]
+        pattern: "BismarkIndex"
   - bwameth_index:
       type: file
       description: |
         Bwameth genome index files
         Structure: [ val(meta), path(bwameth_index) ]
+        pattern: "index"
   - versions:
       type: file
       description: |
