add subworkflow GPU test path to test.yml include

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -670,6 +670,8 @@ jobs:
             path: modules/nf-core/xeniumranger/resegment
           - profile: conda
             path: modules/nf-core/xeniumranger/import-segmentation
+          - profile: [conda, docker_self_hosted, singularity]
+            path: subworkflows/nf-core/fastq_align_dedup_bwameth/fq2bammeth.nf.test
 
     env:
       NXF_ANSI_LOG: false
@@ -698,7 +700,7 @@ jobs:
             profile: [docker_self_hosted, singularity]
           - path: modules/nf-core/parabricks/fq2bammeth
             profile: [docker_self_hosted, singularity]
-          - path: subworkflows/nf-core/fastq_align_dedup_bwameth
+          - path: subworkflows/nf-core/fastq_align_dedup_bwameth/fq2bammeth.nf.test
             profile: [docker_self_hosted, singularity]
     env:
       NXF_ANSI_LOG: false
