ci: Try removing path

--- a/.github/actions/nf-test-action/action.yml
+++ b/.github/actions/nf-test-action/action.yml
@@ -82,8 +82,7 @@ runs:
           --changed-since HEAD^ \
           --shard ${{ inputs.shard }}/${{ inputs.total_shards }} \
           --filter process,workflow \
-          --follow-dependencies \
-          ${{ inputs.path }}
+          --follow-dependencies
 
       # TODO If matrix == conda create a conda-fail.yml and commit it
 
