ci: Add fetch-depth and remove duplicate checkout

--- a/.github/workflows/nf-test.yml
+++ b/.github/workflows/nf-test.yml
@@ -82,7 +82,8 @@ jobs:
       SENTIEON_ENCRYPTION_KEY: ${{ secrets.SENTIEON_ENCRYPTION_KEY }}
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
-      - uses: actions/setup-python@0b93645e9fea7318ecaed2b359559ac225c90a2b # v5
+        with:
+          fetch-depth: 0
       - name: Run nf-test Action
         uses: ./.github/actions/nf-test-action
         with:
