--- a/.github/actions/nf-test-action/action.yml
+++ b/.github/actions/nf-test-action/action.yml
@@ -80,7 +80,8 @@ runs:
           --changed-since HEAD^ \
           --shard ${{ inputs.shard }}/${{ inputs.total_shards }} \
           --filter process,workflow \
-          --follow-dependencies
+          --follow-dependencies \
+          ${{ inputs.path }}
 
       # TODO If matrix == conda create a conda-fail.yml and commit it
 
