added stageInMode copy to tests configs

--- a/modules/nf-core/parabricks/haplotypecaller/tests/cp-nextflow.config
+++ b/modules/nf-core/parabricks/haplotypecaller/tests/cp-nextflow.config
@@ -1,6 +1,6 @@
 process {
     withName: 'PARABRICKS_HAPLOTYPECALLER' {
-        ext.args = "--gvcf --htvc-low-memory"
+        ext.args = "--htvc-low-memory"
         stageInMode = 'copy'
     }
 }
