Updated tests to use params

--- a/modules/nf-core/trgt/merge/tests/nextflow.config
+++ b/modules/nf-core/trgt/merge/tests/nextflow.config
@@ -1,3 +1,6 @@
+params {
+    trgt_merge_args = ""
+}
 process {
     withName: "BCFTOOLS_SORT" {
         ext.args = "--write-index=tbi --output-type z"
@@ -5,5 +8,8 @@ process {
     }
     withName: "TRGT_GENOTYPE" {
         ext.args = { "--sample-name ${meta.id}"}
+    }
+    withName: "TRGT_MERGE" {
+        ext.args = params.trgt_merge_args
     }
 }
