--- a/subworkflows/nf-core/fastq_align_parabricks/tests/lowmem.config
+++ b/subworkflows/nf-core/fastq_align_parabricks/tests/lowmem.config
@@ -1,6 +1,11 @@
 process {
+
     withName: 'PARABRICKS_FQ2BAM' {
         ext.args = '--low-memory'
+    }
+
+    withName: 'PARABRICKS_APPLYBQSR' {
+        stageInMode = 'copy'
     }
     // Ref: https://forums.developer.nvidia.com/t/problem-with-gpu/256825/6
     // Parabricks’s fq2bam requires 24GB of memory.
