--- a/modules/nf-core/crabs/insilicopcr/meta.yml
+++ b/modules/nf-core/crabs/insilicopcr/meta.yml
@@ -1,5 +1,6 @@
 name: crabs_insilicopcr
-description: CRABS extracts the amplicon region of the primer set by conducting an in silico PCR.
+description: CRABS extracts the amplicon region of the primer set by conducting an
+  in silico PCR.
 keywords:
   - insilico
   - PCR
@@ -16,33 +17,34 @@ tools:
       tool_dev_url: https://github.com/gjeunen/reference_database_creator
       doi: 10.1111/1755-0998.13741
       licence: ["MIT License"]
+      identifier: ""
 
 input:
-  - meta:
-      type: map
-      description: |
-        Groovy Map containing sample information
-        e.g. `[ id:'sample1' ]`
-  - fasta:
-      type: file
-      description: Sequence to conduct in silico PCR on
-      pattern: "*.{fa,fasta}"
-
+  - - meta:
+        type: map
+        description: |
+          Groovy Map containing sample information
+          e.g. `[ id:'sample1' ]`
+    - fasta:
+        type: file
+        description: Sequence to conduct in silico PCR on
+        pattern: "*.{fa,fasta}"
 output:
-  - meta:
-      type: map
-      description: |
-        Groovy Map containing sample information
-        e.g. `[ id:'sample1' ]`
-  - versions:
-      type: file
-      description: File containing software versions
-      pattern: "versions.yml"
   - fasta:
-      type: file
-      description: Reverse complemented amplified Sequence
-      pattern: "*.{fa,fasta}"
-
+      - meta:
+          type: map
+          description: |
+            Groovy Map containing sample information
+            e.g. `[ id:'sample1' ]`
+      - "*.{fa,fasta}":
+          type: file
+          description: Reverse complemented amplified Sequence
+          pattern: "*.{fa,fasta}"
+  - versions:
+      - versions.yml:
+          type: file
+          description: File containing software versions
+          pattern: "versions.yml"
 authors:
   - "@famosab"
   - "@a4000"
