--- a/modules/nf-core/bcftools/pluginsplit/tests/nextflow_prefix.config
+++ b/modules/nf-core/bcftools/pluginsplit/tests/nextflow_prefix.config
@@ -1,5 +1,6 @@
 process {
     withName: 'BCFTOOLS_PLUGINSPLIT' {
+        ext.prefix = "${meta.id}."
         ext.suffix = ".suffix"
         ext.args = '--write-index=tbi --output-type z'
     }
