--- a/modules/nf-core/bcftools/pluginsplit/tests/nextflow_prefix.config
+++ b/modules/nf-core/bcftools/pluginsplit/tests/nextflow_prefix.config
@@ -1,7 +1,6 @@
 process {
     withName: 'BCFTOOLS_PLUGINSPLIT' {
-        ext.prefix = "${meta.id}."
-        ext.suffix = ".suffix"
+        ext.prefix = {"${meta.id}_"} // Add a prefix to the output files
         ext.args = '--write-index=tbi --output-type z'
     }
 }
