ci(gpu): Remove changed-since

--- a/.github/actions/nf-test-action/action.yml
+++ b/.github/actions/nf-test-action/action.yml
@@ -77,7 +77,7 @@ runs:
           --tap=test.tap \
           --verbose \
           --ci \
-          --changed-since HEAD^ \
+          # FIXME this doesn't work with a path? --changed-since HEAD^ \
           --shard ${{ inputs.shard }}/${{ inputs.total_shards }} \
           --filter process,workflow \
           --follow-dependencies \
