--- a/.github/workflows/nf-test.yml
+++ b/.github/workflows/nf-test.yml
@@ -26,11 +26,13 @@ concurrency:
 
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  NFT_VER: "0.9.2"
+  # renovate: datasource=github-releases depName=askimed/nf-test versioning=semver
+  NFTEST_VERSION: "0.9.2"
   NXF_ANSI_LOG: false
   NXF_SINGULARITY_CACHEDIR: ${{ github.workspace }}/.singularity
   NXF_SINGULARITY_LIBRARYDIR: ${{ github.workspace }}/.singularity
-  NXF_VER: "24.10.1"
+  # renovate: datasource=github-releases depName=nextflow/nextflow versioning=semver
+  NXF_VERSION: "24.10.1"
 
 jobs:
   # TODO
@@ -44,7 +46,7 @@ jobs:
   #     - name: Install nf-test
   #       uses: nf-core/setup-nf-test@v1
   #       with:
-  #         version: ${{ env.NFT_VER }}
+  #         version: ${{ env.NFTEST_VERSION }}
 
   #     - id: shards
   #       run: |
