Add changes from codereview
Co-authored-by: mashehu <mashehu@users.noreply.github.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,7 +26,7 @@ repos:
         args: [--fix, --exit-non-zero-on-fix, "--select", "I,E1,E4,E7,E9,F,UP,N"] # sort imports and fix (rules taken from nf-core/tools)
       - id: ruff-format # formatter
   - repo: https://github.com/editorconfig-checker/editorconfig-checker.python
-    rev: "" # pick a git hash / tag to point to
+    rev: "3.0.3"
     hooks:
       - id: editorconfig-checker
         alias: ec
