--- a/.github/actions/nf-test-action/action.yml
+++ b/.github/actions/nf-test-action/action.yml
@@ -1,9 +1,6 @@
 name: "nf-test Action"
 description: "Runs nf-test with common setup steps"
 inputs:
-  path:
-    description: "Path to test"
-    required: false
   profile:
     description: "Profile to use"
     required: true
@@ -13,6 +10,9 @@ inputs:
   total_shards:
     description: "Total number of test shards(NOT the total number of matrix jobs)"
     required: true
+  tags:
+    description: "Tags to test (`<tags>[,<tags>...]`)"
+    required: false
 
 runs:
   using: "composite"
@@ -70,6 +70,7 @@ runs:
       env:
         SENTIEON_LICSRVR_IP: ${{ env.SENTIEON_LICSRVR_IP }}
         SENTIEON_AUTH_MECH: "GitHub Actions - token"
+        TAGS: ${{ inputs.tags && format('--tag {0}', inputs.tags) || '' }}
       run: |
         NFT_WORKDIR=~ \
         nf-test test \
@@ -77,11 +78,11 @@ runs:
           --tap=test.tap \
           --verbose \
           --ci \
-          # FIXME this doesn't work with a path? --changed-since HEAD^ \
+          --changed-since HEAD^ \
           --shard ${{ inputs.shard }}/${{ inputs.total_shards }} \
           --filter process,workflow \
           --follow-dependencies \
-          ${{ inputs.path }}
+          ${{ env.TAGS }}
 
       # TODO If no test.tap, then make one to spoof?
     - uses: pcolby/tap-summary@0959cbe1d4422e62afc65778cdaea6716c41d936 # v1
