--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -670,8 +670,12 @@ jobs:
             path: modules/nf-core/xeniumranger/resegment
           - profile: conda
             path: modules/nf-core/xeniumranger/import-segmentation
-          - profile: [conda, docker_self_hosted, singularity]
-            path: subworkflows/nf-core/fastq_align_dedup_bwameth/gpu.nf.test
+          - path: subworkflows/nf-core/fastq_align_dedup_bwameth/gpu.nf.test
+            profile: conda
+          - path: subworkflows/nf-core/fastq_align_dedup_bwameth/gpu.nf.test
+            profile: docker_self_hosted
+          - path: subworkflows/nf-core/fastq_align_dedup_bwameth/gpu.nf.test
+            profile: singularity
 
     env:
       NXF_ANSI_LOG: false
@@ -701,7 +705,9 @@ jobs:
           - path: modules/nf-core/parabricks/fq2bammeth
             profile: [docker_self_hosted, singularity]
           - path: subworkflows/nf-core/fastq_align_dedup_bwameth/gpu.nf.test
-            profile: [docker_self_hosted, singularity]
+            profile: docker_self_hosted
+          - path: subworkflows/nf-core/fastq_align_dedup_bwameth/gpu.nf.test
+            profile: singularity]
     env:
       NXF_ANSI_LOG: false
 
