--- a/.github/workflows/gpu-tests.yml
+++ b/.github/workflows/gpu-tests.yml
@@ -61,6 +61,12 @@ jobs:
           n_parents: 2
           tags: "gpu"
 
+      - name: Exit early if no changes
+        if: ${{ fromJSON(steps.list.outputs.components) == '[]' }}
+        run: |
+          echo "No GPU test changes detected - skipping tests"
+          exit 0
+
       - name: Separate modules and subworkflows
         id: outputs
         run: |
